<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UsbMidiSample2</string>

    <string name="not_connect">Not Connect</string>
    <string name="channel_select">Channel Select</string>

    <string name="button_c">C</string>
    <string name="button_cis">C#</string>
    <string name="button_d">D</string>
    <string name="button_dis">D#</string>
    <string name="button_e">E</string>
    <string name="button_f">F</string>
    <string name="button_fis">F#</string>
    <string name="button_g">G</string>
    <string name="button_gis">G#</string>
    <string name="button_a">A</string>
    <string name="button_ais">A#</string>
    <string name="button_b">B</string>
    <string name="button_c2">C2</string>

    <string name="button_drum60">60</string>
    <string name="button_drum61">61</string>
	<string name="button_drum62">62</string>
	<string name="button_drum63">63</string>
	<string name="button_drum64">64</string>
	<string name="button_drum65">65</string>
	<string name="button_drum66">66</string>
	<string name="button_drum67">67</string>
	<string name="button_drum68">68</string>
	<string name="button_drum69">69</string>
	<string name="button_drum70">70</string>
	<string name="button_drum71">71</string>
	<string name="button_drum72">72</string>

</resources>
